--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
 body {
     font-family: 'Capriola', sans-serif;
-    background-color: #F3DFF0;
+    background-color: #dbd1f1;
     color: #4A4A4A;
 }
-h1, h2, h3 {
+
+
+.navbar-brand, .nav-link {
+    color: white !important;
+}
+h1, h2{
+    font-family: 'Capriola', sans-serif;
+}
+h3 {
     font-family: 'Cagliostro', sans-serif;
 }
 .bg-roxo {
@@ -11,4 +19,216 @@ h1, h2, h3 {
 }
 .bg-amarelo {
     background-color: #FBE68A;
+}
+.navbar-toggler{
+    border: 1.5px solid #B5A3E0;
+
+}
+nav{
+    transition: background-color 0.3s ease-in-out;
+}
+.hero {
+    position: relative;
+    width: 100%;
+    height: 100vh; /* Ocupa toda a altura da tela */
+    background: url('https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgncW6CI1ZMFmtS0F-6uwgcO_0pElm2jMJYI_Wu58meqOJm1UXuQnUoIgkUlXPIAcmcCM_JyWLs90xoWrJ1tgBtkJDLCLGEn59J7ukIRes_pqPcgGsBgR7M6vjUqLvwpF1-epX2unWY0Iy4/w0/cat-1-4K.jpg') no-repeat center center/cover;
+    color: white;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero::after {
+    position:absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5) ;
+    width: 100%;
+    height: 100vh;
+    z-index: 0;
+} 
+
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+}
+
+.navbar ul{
+    text-align: end;
+}
+
+.hero h1 {
+    font-size: 3rem;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.hero p {
+    font-size: 1.5rem;
+    max-width: 600px;
+}
+
+.btn-hero {
+    background-color: #FBE68A;
+    color: #4A4A4A;
+    font-weight: bold;
+    border-radius: 30px;
+    padding: 10px 20px;
+    border: none;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.btn-hero:hover {
+    opacity: 0.7;
+}
+
+.btn-submmit {
+    background-color: #FBE68A;
+    color: #4A4A4A;
+    font-weight: bold;
+    border-radius: 30px;
+    padding: 10px 20px;
+    border: none;
+    transition: opacity 0.3s ease-in-out; /* Adiciona uma transição suave */
+}
+
+.btn-submmit:hover{
+    opacity: 0.7;
+}
+
+.carousel-container {
+    position: relative;
+    max-width: 800px;
+    margin: auto;
+    overflow: hidden;
+  }
+  .carousel-inner {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+  }
+  .carousel-item {
+    min-width: 100%;
+    display: none;
+  }
+  .carousel-item.active {
+    display: flex;
+  }
+  .carousel-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #f8f9fa;
+    padding: 20px;
+    height: 250px;
+  }
+  .carousel-text {
+    flex: 1;
+    padding: 20px;
+  }
+  .carousel-image {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .carousel-image img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
+  .carousel-control {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+  }
+  .prev {
+    left: 10px;
+  }
+  .next {
+    right: 10px;
+  }
+  .carousel-indicators {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  .indicator {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #8c7db1;
+    border: none;
+    margin: 0 5px;
+    cursor: pointer;
+  }
+  .indicator.active {
+    background-color: #5a4c8c;
+  }
+
+.card {
+    border: none;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    height: 35vh;
+    transition: all .3s ease;
+}
+
+.card:hover {
+    transform: scale(1.02);
+}
+.card-img-top{
+    height: 80%;
+    object-fit: cover;
+
+}
+
+.card-body .btn{
+    background-color: #B5A3E0;
+    transition: color 0.4s ease-in-out;
+
+}
+.card-body .btn:hover{
+    color: white;
+}
+.modal-body .btn{
+    background-color: #FBE68A;
+    color: #4A4A4A;
+}
+.modal-body .btn:hover{
+    background-color: #f0ce37;
+    color: black;
+}
+.footer {
+    background-color: #B5A3E0;
+    color: white;
+    padding: 20px;
+}
+
+@media(max-width: 990px){
+    .navbar ul li {
+        gap: 15px;
+        padding: 10px;
+        border-bottom: 1px solid #ccc;
+    }
+    .navbar ul li a{
+        border-radius: 5px;
+    }
+    .navbar ul{
+        margin-top: 10px;
+        border-radius: 10px !important;
+        text-align: center;
+        background-color: #B5A3E0;
+    }
+    .navbar ul li:last-child {
+        border-bottom: none;
+      }
 }
