--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
     background-color: #F3DFF0;
     color: #4A4A4A;
 }
+
+
+.navbar-brand, .nav-link {
+    color: white !important;
+}
 h1, h2, h3 {
     font-family: 'Cagliostro', sans-serif;
 }
@@ -11,4 +16,71 @@ h1, h2, h3 {
 }
 .bg-amarelo {
     background-color: #FBE68A;
+}
+.hero {
+    position: relative;
+    width: 100%;
+    height: 100vh; /* Ocupa toda a altura da tela */
+    background: url('https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgncW6CI1ZMFmtS0F-6uwgcO_0pElm2jMJYI_Wu58meqOJm1UXuQnUoIgkUlXPIAcmcCM_JyWLs90xoWrJ1tgBtkJDLCLGEn59J7ukIRes_pqPcgGsBgR7M6vjUqLvwpF1-epX2unWY0Iy4/w0/cat-1-4K.jpg') no-repeat center center/cover;
+    color: white;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.7;
+}
+
+.navbar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+}
+
+.hero h1 {
+    font-size: 3rem;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.hero p {
+    font-size: 1.5rem;
+    max-width: 600px;
+}
+
+.btn-hero {
+    background-color: #FBE68A;
+    color: #4A4A4A;
+    font-weight: bold;
+    border-radius: 30px;
+    padding: 10px 20px;
+    border: none;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.btn-hero:hover {
+    opacity: 0.7;
+}
+
+.btn-submmit {
+    background-color: #FBE68A;
+    color: #4A4A4A;
+    font-weight: bold;
+    border-radius: 30px;
+    padding: 10px 20px;
+    border: none;
+    transition: opacity 0.3s ease-in-out; /* Adiciona uma transição suave */
+}
+.btn-submmit:hover{
+    opacity: 0.7;
+}
+.card {
+    border: none;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+.footer {
+    background-color: #B5A3E0;
+    color: white;
+    padding: 20px;
 }
