--- a/style.css
+++ b/style.css
@@ -7,6 +7,29 @@ body {
 
 .navbar-brand, .nav-link {
     color: white !important;
+    transition: color 0.3s ease-in-out;
+
+}
+.nav-link:hover{
+    color: #ffffffa4 !important;
+}
+.logo{
+    width: 60px;
+    height: 60px;
+    background-color: #fff;
+    -webkit-mask-image: url('icons/Alternate3Logo1.svg');
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-size: contain;
+    mask-image: url('icons/Alternate3Logo1.svg');
+    mask-repeat: no-repeat;
+    mask-size: contain;
+    display: block;
+    margin-left: 0;
+}
+.navbar-brand{
+    color: white;
+    padding: 0px;
+    margin: 0 20px;
 }
 h1, h2{
     font-family: 'Capriola', sans-serif;
@@ -104,7 +127,9 @@ nav{
 }
 
 #carousel{
-    margin: 10vh 0;
+    border: solid #fff;
+    border-left: 10px;
+    border-right: 10px;
 }
 .carousel-item {
     height: 500px;
@@ -126,18 +151,24 @@ nav{
 .saiba-mais {
     display: inline-block;
     margin-top: 10px;
+    border: none;
+    border-radius: 5px;
+    padding: 6px;
+    background-color: #8c7db1;
+    color: white;
 }
 
-.saiba-mais i {
+.saiba-mais {
     margin-left: 5px;
+    transition: background 0.5s;
     transition: transform 0.3s;
+
 }
 
-.saiba-mais:hover i {
+.saiba-mais:hover {
     transform: translateX(5px);
+    background-color: #B5A3E0;
 }
-
-
 .card {
     position: relative;
     overflow: hidden;
@@ -154,7 +185,6 @@ nav{
     transform: scale(1.01);
 }
 
-/* Criando um container para a imagem e o botão */
 .image-container {
     position: relative;
     width: 100%;
@@ -167,8 +197,7 @@ nav{
     object-fit: cover;
 }
 
-/* Posiciona o botão dentro da imagem */
-.card .btn {
+/* .card .btn {
     background-color: #8c7db1;
     color: white;
     border: none;
@@ -180,8 +209,59 @@ nav{
 
 .card .btn:hover {
     background-color: #8c7db1a1;
+} */
+.wrapper-button{
+    width: 60px;
+    height: 60px;
+    background-color: #FBE68A; 
+    border-radius: 50%;       
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background 0.3s;
 }
+.wrapper-button:hover{
+    background-color: #aca0cb; 
 
+}
+.adotar{
+    width: 60px;
+    height: 60px;
+    background-color: #4A4A4A;
+    -webkit-mask-image: url('icons/ButtonAdopt1.svg');
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-size: contain;
+    mask-image: url('icons/ButtonAdopt1.svg');
+    mask-repeat: no-repeat;
+    mask-size: contain;
+  
+}
+.wrapper-button-2{
+    width: 60px;
+    height: 60px;
+    background-color: #c7bbe7; 
+    border-radius: 50%;       
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background 0.3s;
+}
+.wrapper-button-2:hover{
+    background-color: #FBE68A; 
+
+}
+.apadrinhar{
+    width: 60px;
+    height: 60px;
+    background-color: #000;
+    -webkit-mask-image: url('icons/ButtonApadrinhar1.svg');
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-size: contain;
+    mask-image: url('icons/ButtonApadrinhar1.svg');
+    mask-repeat: no-repeat;
+    mask-size: contain;
+  
+}
 .card-body {
     margin: 0px;
     padding: 1vh;
