--- a/style.css
+++ b/style.css
@@ -126,19 +126,22 @@ nav{
     opacity: 0.7;
 }
 
-#carousel{
-    border: solid #fff;
-    border-left: 10px;
-    border-right: 10px;
-}
-.carousel-item {
+#carouselExemplo {
+    border: 5px solid #fff;
+    width: 80%;
+    border-radius: 12px;
+    margin-top: 40px;
+  }
+  
+  .carousel-item {
+    border-radius: 8px;
     height: 500px;
     position: relative;
     background-size: cover;
     background-position: center;
-}
-
-.carousel-caption {
+  }
+  
+  .carousel-caption {
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 10px;
     padding: 20px;
@@ -146,9 +149,10 @@ nav{
     left: 10%;
     right: 10%;
     text-align: left;
-}
+  }
+  
 
-.saiba-mais {
+.saiba-mais, .doe {
     display: inline-block;
     margin-top: 10px;
     border: none;
@@ -156,18 +160,23 @@ nav{
     padding: 6px;
     background-color: #8c7db1;
     color: white;
-}
-
-.saiba-mais {
     margin-left: 5px;
     transition: background 0.5s;
     transition: transform 0.3s;
-
 }
 
 .saiba-mais:hover {
     transform: translateX(5px);
     background-color: #B5A3E0;
+}
+
+.doe{
+    background-color: #FBE68A;
+    color: #4A4A4A;
+}
+.doe:hover{
+    transform: translateX(5px);
+    background-color: #f0ce37;
 }
 .card {
     position: relative;
@@ -185,7 +194,7 @@ nav{
     transform: scale(1.01);
 }
 
-.image-container {
+.card-container {
     position: relative;
     width: 100%;
     height: 80%;
@@ -210,9 +219,16 @@ nav{
 .card .btn:hover {
     background-color: #8c7db1a1;
 } */
+.card-body button{
+    position: absolute;
+    z-index: 1;
+    bottom: 50px;
+    right: 5px;
+}
 .wrapper-button{
     width: 60px;
     height: 60px;
+
     background-color: #FBE68A; 
     border-radius: 50%;       
     display: flex;
@@ -377,6 +393,9 @@ nav{
       .card{
         height:40vh;
       }
+      .container{
+        justify-content: center;
+      }
      
 }
 
@@ -389,4 +408,9 @@ nav{
     .card{
         height:75vh;
       }
+      .wrapper-button, .adotar{
+        width: 90px;
+        height: 90px;
+      }
+     
 }
